2022-10-09T16:07:24Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3214744952
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 70 83 / 77 90
* notice: next accum: outdated-unq outdated-all / unq all: 71 84 / 77 90
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-25] / []

2022-10-07T08:08:26Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3203225075
* notice: last 14d: unq all: 4 7
* notice: prev accum: outdated-unq outdated-all / unq all: 69 82 / 77 90
* notice: next accum: outdated-unq outdated-all / unq all: 70 83 / 77 90
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-23] / []

2022-10-06T08:08:40Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3195555308
* notice: last 14d: unq all: 4 8
* notice: prev accum: outdated-unq outdated-all / unq all: 68 81 / 77 90
* notice: next accum: outdated-unq outdated-all / unq all: 69 82 / 77 90
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-22] / []

2022-10-06T00:38:00Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3193673322
* notice: last 14d: unq all: 4 9
* notice: prev accum: outdated-unq outdated-all / unq all: 68 81 / 76 89
* notice: next accum: outdated-unq outdated-all / unq all: 68 81 / 77 90
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-05]

2022-10-03T16:12:55Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3175694599
* notice: last 14d: unq all: 3 8