@@ -1,3 +1,11 @@
+2022-10-10T08:13:32Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3217794668
+* notice: last 14d: unq all: 3 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 71 84 / 77 90
+* notice: next accum: outdated-unq outdated-all / unq all: 72 85 / 77 90
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-26] / []
+
 2022-10-09T16:07:24Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3214744952
 * notice: last 14d: unq all: 3 6
